fin du tableau de bord